added simple code for error analysis using group comparison stat tests for ITR on GA

--- a/notebooks/ITRerror_analysis.ipynb
+++ b/notebooks/ITRerror_analysis.ipynb
@@ -41,7 +41,7 @@
     "\n",
     "**Analyses**\n",
     "- [ ] (1) clustering and purity per metadata feature\n",
-    "- [ ] (2) manual cohort creation, chi-sq or mwu per feature"
+    "- [x] (2) manual cohort creation, chi-sq or mwu per feature"
    ]
   },
   {
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "2ce074a4-2b16-4738-ba15-69c25745452e",
    "metadata": {},
    "outputs": [
@@ -468,68 +468,123 @@
        "      <td>187.187229</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>age_enroll</td>\n",
-       "      <td>9.291952e-01</td>\n",
+       "      <th>42</th>\n",
+       "      <td>ptb_37wks</td>\n",
+       "      <td>4.725510e-16</td>\n",
        "      <td>Classification</td>\n",
-       "      <td>{'q0.25': {'highpredlow': 24.5, 'lowpredhigh':...</td>\n",
-       "      <td>4.575933</td>\n",
-       "      <td>0.031893</td>\n",
+       "      <td>{'0.0': {'highpredlow': 308, 'lowpredhigh': 11...</td>\n",
+       "      <td>0.812000</td>\n",
+       "      <td>15.325551</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>marital</td>\n",
-       "      <td>3.419380e-02</td>\n",
+       "      <th>59</th>\n",
+       "      <td>deliv_mode</td>\n",
+       "      <td>8.335504e-15</td>\n",
        "      <td>Classification</td>\n",
-       "      <td>{'1.0': {'highpredlow': 166, 'lowpredhigh': 10...</td>\n",
-       "      <td>0.764000</td>\n",
-       "      <td>1.466053</td>\n",
+       "      <td>{'1.0': {'highpredlow': 209, 'lowpredhigh': 87...</td>\n",
+       "      <td>0.544000</td>\n",
+       "      <td>14.079068</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>gestage_by</td>\n",
-       "      <td>1.731720e-06</td>\n",
+       "      <th>37</th>\n",
+       "      <td>corticosteroids</td>\n",
+       "      <td>3.226126e-12</td>\n",
        "      <td>Classification</td>\n",
-       "      <td>{'-99.0': {'highpredlow': 1, 'lowpredhigh': 9,...</td>\n",
-       "      <td>0.592000</td>\n",
-       "      <td>5.761522</td>\n",
+       "      <td>{'0.0': {'highpredlow': 305, 'lowpredhigh': 11...</td>\n",
+       "      <td>0.832000</td>\n",
+       "      <td>11.491319</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>insur</td>\n",
-       "      <td>4.242881e-01</td>\n",
+       "      <th>64</th>\n",
+       "      <td>neonatal_complication</td>\n",
+       "      <td>5.111566e-11</td>\n",
        "      <td>Classification</td>\n",
-       "      <td>{'-99.0': {'highpredlow': 0, 'lowpredhigh': 0,...</td>\n",
-       "      <td>0.540000</td>\n",
-       "      <td>0.372339</td>\n",
+       "      <td>{'0.0': {'highpredlow': 256, 'lowpredhigh': 99...</td>\n",
+       "      <td>0.708000</td>\n",
+       "      <td>10.291446</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>alcohol</td>\n",
+       "      <td>1.744642e-09</td>\n",
+       "      <td>Classification</td>\n",
+       "      <td>{'0.0': {'highpredlow': 318, 'lowpredhigh': 12...</td>\n",
+       "      <td>0.864000</td>\n",
+       "      <td>8.758294</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38</th>\n",
+       "      <td>abuse</td>\n",
+       "      <td>5.929172e-09</td>\n",
+       "      <td>Classification</td>\n",
+       "      <td>{'1.0': {'highpredlow': 1, 'lowpredhigh': 3, '...</td>\n",
+       "      <td>0.924000</td>\n",
+       "      <td>8.227006</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>81</th>\n",
+       "      <td>choosesleep_1trim</td>\n",
+       "      <td>7.976030e-09</td>\n",
+       "      <td>Classification</td>\n",
+       "      <td>{'-99.0': {'highpredlow': 11, 'lowpredhigh': 3...</td>\n",
+       "      <td>0.616000</td>\n",
+       "      <td>8.098213</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>assist_repro</td>\n",
+       "      <td>2.507223e-08</td>\n",
+       "      <td>Classification</td>\n",
+       "      <td>{'1.0': {'highpredlow': 5, 'lowpredhigh': 4, '...</td>\n",
+       "      <td>0.920000</td>\n",
+       "      <td>7.600807</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>smoke</td>\n",
+       "      <td>5.487040e-08</td>\n",
+       "      <td>Classification</td>\n",
+       "      <td>{'0.0': {'highpredlow': 299, 'lowpredhigh': 12...</td>\n",
+       "      <td>0.804000</td>\n",
+       "      <td>7.260662</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     Variable              P        Tasktype  \\\n",
-       "0          GA  6.497872e-188  Classification   \n",
-       "1  age_enroll   9.291952e-01  Classification   \n",
-       "2     marital   3.419380e-02  Classification   \n",
-       "3  gestage_by   1.731720e-06  Classification   \n",
-       "4       insur   4.242881e-01  Classification   \n",
+       "                 Variable              P        Tasktype  \\\n",
+       "0                      GA  6.497872e-188  Classification   \n",
+       "42              ptb_37wks   4.725510e-16  Classification   \n",
+       "59             deliv_mode   8.335504e-15  Classification   \n",
+       "37        corticosteroids   3.226126e-12  Classification   \n",
+       "64  neonatal_complication   5.111566e-11  Classification   \n",
+       "11                alcohol   1.744642e-09  Classification   \n",
+       "38                  abuse   5.929172e-09  Classification   \n",
+       "81      choosesleep_1trim   7.976030e-09  Classification   \n",
+       "39           assist_repro   2.507223e-08  Classification   \n",
+       "12                  smoke   5.487040e-08  Classification   \n",
        "\n",
-       "                                         Error group  eval_test   -log10(P)  \n",
-       "0  {'q0.25': {'highpredlow': 32.0, 'lowpredhigh':...   9.129624  187.187229  \n",
-       "1  {'q0.25': {'highpredlow': 24.5, 'lowpredhigh':...   4.575933    0.031893  \n",
-       "2  {'1.0': {'highpredlow': 166, 'lowpredhigh': 10...   0.764000    1.466053  \n",
-       "3  {'-99.0': {'highpredlow': 1, 'lowpredhigh': 9,...   0.592000    5.761522  \n",
-       "4  {'-99.0': {'highpredlow': 0, 'lowpredhigh': 0,...   0.540000    0.372339  "
+       "                                          Error group  eval_test   -log10(P)  \n",
+       "0   {'q0.25': {'highpredlow': 32.0, 'lowpredhigh':...   9.129624  187.187229  \n",
+       "42  {'0.0': {'highpredlow': 308, 'lowpredhigh': 11...   0.812000   15.325551  \n",
+       "59  {'1.0': {'highpredlow': 209, 'lowpredhigh': 87...   0.544000   14.079068  \n",
+       "37  {'0.0': {'highpredlow': 305, 'lowpredhigh': 11...   0.832000   11.491319  \n",
+       "64  {'0.0': {'highpredlow': 256, 'lowpredhigh': 99...   0.708000   10.291446  \n",
+       "11  {'0.0': {'highpredlow': 318, 'lowpredhigh': 12...   0.864000    8.758294  \n",
+       "38  {'1.0': {'highpredlow': 1, 'lowpredhigh': 3, '...   0.924000    8.227006  \n",
+       "81  {'-99.0': {'highpredlow': 11, 'lowpredhigh': 3...   0.616000    8.098213  \n",
+       "39  {'1.0': {'highpredlow': 5, 'lowpredhigh': 4, '...   0.920000    7.600807  \n",
+       "12  {'0.0': {'highpredlow': 299, 'lowpredhigh': 12...   0.804000    7.260662  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "res.sort_values(by='P')"
+    "res.sort_values(by='P').head(10)"
    ]
   },
   {
