--- a/notebooks/ITRerror_analysis.ipynb
+++ b/notebooks/ITRerror_analysis.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "fb5cc163-094c-451e-830d-b147aa65b6b6",
+   "id": "mighty-above",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d34c7891-be99-4b41-9548-07a6d2420e91",
+   "id": "lyric-universal",
    "metadata": {},
    "source": [
     "# error analysis\n",
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "f98f9465-6a4a-424e-8c90-45d116460e92",
+   "id": "higher-reservoir",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "dd9141bc-09d8-43c0-95fd-9e554c4d11c8",
+   "id": "organized-importance",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1337db3c-cc67-4439-8238-f8b87e25e852",
+   "id": "outside-village",
    "metadata": {},
    "source": [
     "### Stratification\n",
@@ -146,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "fd9918b9-d034-4610-91ad-f1d98dc934c7",
+   "id": "thermal-wagon",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "a0fde355-5626-4184-883f-cc25f0b66029",
+   "id": "compound-commodity",
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "df10ae53-0d7c-40cc-9091-e9966156f1c3",
+   "id": "favorite-setting",
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "9887f5e8-d6ad-4c70-8960-dc4709f9cf08",
+   "id": "protected-polish",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "2292cb1d-ff01-45d9-80bc-ca71e9c1c036",
+   "id": "played-hardwood",
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "be2893b0-f89f-4af1-945a-5f6fb23c66eb",
+   "id": "packed-coupon",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "798fea34-8069-4f1d-b63d-4101565712d3",
+   "id": "fatal-contribution",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,7 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "40f59e52-c518-4c7f-9819-32b23917b0af",
+   "id": "concrete-simon",
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +354,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "a7c7f32a-42a5-4faa-b082-2eaac1f6fc38",
+   "id": "absolute-shoot",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +364,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "1d9bdc94-42d6-4398-81c3-dfea35e4cd8e",
+   "id": "entertaining-offering",
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e375e9d3-cd4f-4e43-bc9f-36663aadc3bc",
+   "id": "ideal-heath",
    "metadata": {},
    "source": [
     "#### next steps\n",
@@ -414,7 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "67ec1a16-21b4-415e-9414-abbb682d7056",
+   "id": "communist-voice",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,7 +425,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "2ce074a4-2b16-4738-ba15-69c25745452e",
+   "id": "operational-adobe",
    "metadata": {},
    "outputs": [
     {
@@ -589,7 +589,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65c89ef1-181d-4db3-a735-b96359cb15ab",
+   "id": "underlying-setting",
    "metadata": {},
    "source": [
     "# Deprecated"
@@ -598,7 +598,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "cb42deee-6954-4a63-bf18-d65368188d1d",
+   "id": "hourly-heaven",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -615,7 +615,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "46c43d05-051e-45b9-930a-00948fec4007",
+   "id": "indian-nomination",
    "metadata": {},
    "outputs": [
     {
@@ -646,7 +646,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "9835f8b4-4a1f-498f-9146-b62fcf7ce8c2",
+   "id": "requested-absence",
    "metadata": {},
    "outputs": [
     {
@@ -679,7 +679,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "f1f04a88-b251-4f5c-8479-01edb89f160e",
+   "id": "black-maker",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -689,7 +689,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "f7d94539-54fa-42d3-a464-fd262b7d7585",
+   "id": "international-journalist",
    "metadata": {},
    "outputs": [
     {
@@ -727,7 +727,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bfba6733-97ae-45e9-8b11-68d3607db8aa",
+   "id": "combined-immigration",
    "metadata": {},
    "source": [
     "# GAM\n",
@@ -739,7 +739,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "2f6f7b41-5113-4e44-bad0-cf62197242ec",
+   "id": "increasing-moment",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -751,7 +751,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "558534e7-86cb-47a4-80d2-a62707a04615",
+   "id": "described-burns",
    "metadata": {},
    "outputs": [
     {
@@ -922,7 +922,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "20bce70e-c936-4d26-baf8-8e439084288a",
+   "id": "behind-chile",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -932,7 +932,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "792d78d9-fb46-40ff-9114-e6b896bc1687",
+   "id": "geographic-support",
    "metadata": {},
    "outputs": [
     {
@@ -953,7 +953,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "097b9c1e-fe5d-4a48-abb4-736cef25ab50",
+   "id": "sonic-coffee",
    "metadata": {},
    "outputs": [
     {
@@ -994,7 +994,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "94a2c50b-283d-4f39-b8b4-b3b6f76097f8",
+   "id": "official-cannon",
    "metadata": {},
    "outputs": [
     {
@@ -1013,7 +1013,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "56a53144-a891-461a-8314-9c062e5b949b",
+   "id": "cordless-segment",
    "metadata": {},
    "outputs": [
     {
@@ -1057,7 +1057,7 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "0d3ed561-dfac-408a-aaee-2ac108f84668",
+   "id": "awful-brush",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1067,7 +1067,7 @@
   {
    "cell_type": "code",
    "execution_count": 136,
-   "id": "e0ec9020-da62-4131-826a-24c9f80dd84e",
+   "id": "formed-simulation",
    "metadata": {},
    "outputs": [
     {
@@ -1093,7 +1093,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f5a439e-1b34-45a5-a20c-61f90313054a",
+   "id": "advisory-coordinate",
    "metadata": {},
    "source": [
     "# chi square tests"
@@ -1102,7 +1102,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0757ac4-c86a-408b-950c-c9110d255b1d",
+   "id": "dirty-polymer",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1110,7 +1110,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1124,7 +1124,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
