push from farnam to pull into local

--- a/notebooks/finding_targets.ipynb
+++ b/notebooks/finding_targets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "id": "3077481b-5078-47da-a556-fe709a113204",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "id": "b918831f-4165-407c-842a-1de98e8b8f91",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "id": "2a8c6135-acd1-499a-bb52-da0e7f8c1742",
    "metadata": {},
    "outputs": [],
@@ -81,6 +81,76 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "id": "3328f7b6-6371-4589-9771-3fa495024fa0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get4dev(md_colnames, colnum):\n",
+    "    exp = 'chk_all'\n",
+    "    trainer = weartrain.InceptionTime_trainer(exp=exp, trial=0,target=md_colnames[colnum])\n",
+    "    modelpkl = glob.glob('/home/ngr4/scratch60/wearables/model_zoo/*{}*pkl'.format(md_colnames[colnum]))[0]\n",
+    "    if False:\n",
+    "        res = trainer.eval_test(modelpkl=modelpkl, eval_trainset=False)\n",
+    "    return trainer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "44ef82fd-2f59-4ebd-8b57-35094da18eb0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if True:\n",
+    "    # get data for dev, specify the following\n",
+    "    target = 'marital'\n",
+    "    \n",
+    "    # main\n",
+    "    colnum = [i for i, c in enumerate(md_colnames) if c==target]\n",
+    "    assert len(colnum)==1, 'Can only specify one, valid for now'\n",
+    "    colnum = colnum[0]\n",
+    "    trainer = get4dev(md_colnames, colnum)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18b66e7c-0698-4ff1-915c-f7439f22edb0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cde0b33e-a9f4-4955-b461-5efc01781cf6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "82daa0a6-f391-4d3f-ac07-079588526446",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f3b42e14-1203-4640-a2cd-7807d189263a",
+   "metadata": {},
+   "source": [
+    "## Results\n",
+    "\n",
+    "### Class-balanced metrics\n",
+    "\n",
+    "Re-collect all evaluation scores for pre-trained models"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 24,
    "id": "2638fdbe-956a-414a-a2a3-0950f141f118",
    "metadata": {},
@@ -92,6 +162,16 @@
     "    modelpkl = glob.glob('/home/ngr4/scratch60/wearables/model_zoo/*{}*pkl'.format(md_colnames[colnum]))[0]\n",
     "    res = trainer.eval_test(modelpkl=modelpkl, eval_trainset=False)\n",
     "    return res['results']['eval_test'].values[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f83276a4-fbbd-4113-9e68-828417affda9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# simulate \n"
    ]
   },
   {
