read from mtn file with oakley sleep scoring

--- a/notebooks/data_summary.ipynb
+++ b/notebooks/data_summary.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "0cefa499-6e06-4def-8483-6afaebf99a34",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 2,
    "id": "cec39be4-4148-4eae-8ca8-2e94856a208e",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 18,
    "id": "1216b11e-f6bb-4c09-9dec-52638bf68ad0",
    "metadata": {},
    "outputs": [
@@ -63,7 +63,7 @@
        "<module 'wearables.scripts.data_v42' from '/home/ngrav/project/wearables/scripts/data_v42.py'>"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -75,17 +75,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "id": "cc43f689-75a1-489d-bbcd-18d9ae511fd1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Raw actigraphy data loaded in 0.0-min\n"
+     ]
+    }
+   ],
    "source": [
     "rawdata = weardata.raw2df()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "id": "9fa6bc4a-920e-4167-ab1b-c110caddf4d2",
    "metadata": {},
    "outputs": [
@@ -93,8 +102,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2447_10\n",
-      "2447\n"
+      "2633_22\n",
+      "2633\n"
      ]
     }
    ],
@@ -110,23 +119,150 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "a79c838b-8087-4d53-85cd-1b12efd6e66d",
+   "execution_count": 22,
+   "id": "cfaae304-04e2-4952-8dcd-297814e2beb3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t = raw.data.index.to_series()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "4896cf5d-3473-4ab8-893b-8f344931626b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "37053"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "f"
+    "26973+10080"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "e4172c7a-28fa-4821-8e52-081f9105652a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sleep = raw.Oakley(threshold=80)\n",
+    "activity = raw.data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "eddb158b-4a82-4795-9447-4956ba9729e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2019-12-18 14:26:00   2019-12-18 14:26:00\n",
+       "2019-12-18 14:27:00   2019-12-18 14:27:00\n",
+       "2019-12-18 14:28:00   2019-12-18 14:28:00\n",
+       "2019-12-18 14:29:00   2019-12-18 14:29:00\n",
+       "2019-12-18 14:30:00   2019-12-18 14:30:00\n",
+       "                              ...        \n",
+       "2020-01-27 14:22:00                   NaT\n",
+       "2020-01-27 14:23:00                   NaT\n",
+       "2020-01-27 14:24:00                   NaT\n",
+       "2020-01-27 14:25:00                   NaT\n",
+       "2020-01-27 14:26:00                   NaT\n",
+       "Length: 57601, dtype: datetime64[ns]"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t.reindex(pd.date_range(t[0], t[0] + datetime.timedelta(days=40), periods=40*24*60+1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "3eccac43-9da6-47d5-9976-92148c02e0b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DatetimeIndex([          '2020-01-06 07:58:00',\n",
+       "               '2020-01-06 07:59:00.005952971',\n",
+       "               '2020-01-06 08:00:00.011905943',\n",
+       "               '2020-01-06 08:01:00.017858914',\n",
+       "               '2020-01-06 08:02:00.023811886',\n",
+       "               '2020-01-06 08:03:00.029764857',\n",
+       "               '2020-01-06 08:04:00.035717829',\n",
+       "               '2020-01-06 08:05:00.041670800',\n",
+       "               '2020-01-06 08:06:00.047623772',\n",
+       "               '2020-01-06 08:07:00.053576743',\n",
+       "               ...\n",
+       "               '2020-01-13 07:48:59.946423256',\n",
+       "               '2020-01-13 07:49:59.952376227',\n",
+       "               '2020-01-13 07:50:59.958329199',\n",
+       "               '2020-01-13 07:51:59.964282170',\n",
+       "               '2020-01-13 07:52:59.970235142',\n",
+       "               '2020-01-13 07:53:59.976188113',\n",
+       "               '2020-01-13 07:54:59.982141085',\n",
+       "               '2020-01-13 07:55:59.988094057',\n",
+       "               '2020-01-13 07:56:59.994047028',\n",
+       "                         '2020-01-13 07:58:00'],\n",
+       "              dtype='datetime64[ns]', length=10080, freq=None)"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t.reindex(t.index.append(pd.date_range(t[-1], t[-1] + datetime.timedelta(days=7), periods=7*24*60+1)[1:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "b030f09a-1dbc-4b87-9d7f-718ce5759290",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2019-12-18 14:26:00   2019-12-18 14:26:00\n",
+       "2019-12-18 14:27:00   2019-12-18 14:27:00\n",
+       "2019-12-18 14:28:00   2019-12-18 14:28:00\n",
+       "2019-12-18 14:29:00   2019-12-18 14:29:00\n",
+       "2019-12-18 14:30:00   2019-12-18 14:30:00\n",
+       "                              ...        \n",
+       "2020-01-06 07:54:00   2020-01-06 07:54:00\n",
+       "2020-01-06 07:55:00   2020-01-06 07:55:00\n",
+       "2020-01-06 07:56:00   2020-01-06 07:56:00\n",
+       "2020-01-06 07:57:00   2020-01-06 07:57:00\n",
+       "2020-01-06 07:58:00   2020-01-06 07:58:00\n",
+       "Freq: T, Length: 26973, dtype: datetime64[ns]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t"
    ]
   },
   {
