adding exps to diagnose bias or var problem for future directions

--- a/notebooks/interpretation_featattr_dev.ipynb
+++ b/notebooks/interpretation_featattr_dev.ipynb
@@ -70,22 +70,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "68e74b36-ff61-4df6-a8d4-a48bc071ebc1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[W pthreadpool-cpp.cc:90] Warning: Leaking Caffe2 thread-pool after fork. (function pthreadpool)\n",
-      "/home/ngrav/miniconda3/envs/wearables/lib/python3.8/site-packages/torch/nn/modules/conv.py:294: UserWarning: Using padding='same' with even kernel lengths and odd dilation may require a zero-padded copy of the input be created (Triggered internally at  /opt/conda/conda-bld/pytorch_1623448278899/work/aten/src/ATen/native/Convolution.cpp:660.)\n",
-      "  return F.conv1d(input, weight, bias, self.stride,\n",
-      "/home/ngrav/miniconda3/envs/wearables/lib/python3.8/site-packages/torch/nn/functional.py:652: UserWarning: Named tensors and all their associated APIs are an experimental feature and subject to change. Please do not use them for anything important until they are released as stable. (Triggered internally at  /opt/conda/conda-bld/pytorch_1623448278899/work/c10/core/TensorImpl.h:1156.)\n",
-      "  return torch.max_pool1d(input, kernel_size, stride, padding, dilation, ceil_mode)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "# best model\n",
@@ -95,6 +83,16 @@
     "evaluation = weareval.eval_trained(trainer, split='test',\n",
     "                                   modelpkl=modelpkl,\n",
     "                                   two_outputs=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8d0707f9-60de-4e5e-862c-0fdec272ca70",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trainer.data.train_ids"
    ]
   },
   {
